--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -18,7 +18,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans "Главная" %}</a></li>
 {#                                <li class="breadcrumb-item"><a href="index.html">Бош саҳифа</a></li>#}
-                                <li class="breadcrumb-item active">{% trans "Уведомления о проверке" %} </li>
+                                <li class="breadcrumb-item active">{% trans "Задачи наблюдения" %} </li>
 {#                                <li class="breadcrumb-item active">Кузатувдаги вазифалар</li>#}
                             </ol>
                         </div>
